fixed overlapping carousel controls

--- a/seldin/Assets/css/style.css
+++ b/seldin/Assets/css/style.css
@@ -6067,7 +6067,7 @@ section .team {
     position: fixed;
     top: 0;
     width: 100%;
-    z-index: 100;
+    z-index: 201;
 }
 
 .map-container {
